--- a/clients.html
+++ b/clients.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/modules/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/settings.css"> 
     <link rel="stylesheet" href="styles/pages/clients.css">
+    <link rel="stylesheet" href="styles/modules/micromodal.css">
     
 </head>
 <body>
@@ -37,7 +38,7 @@
         </section>
         <section class="filters-clients">
             <div class="clients__header">
-                    <button class="clients__add-button">
+                    <button onclick="MicroModal.show('add-modal')" class="clients__add-button">
                         <i class="fa fa-plus-square" aria-hidden="true"></i>
                     </button>
                     <h2 class="clients__title">Список клиентов</h2>
@@ -67,8 +68,8 @@
                             <td>19.05.2004</td>
                             <td>15.01.2025</td>
                             <td><i class="fa fa-history" aria-hidden="true"></i></td>
-                            <td><i class="fa fa-pencil" aria-hidden="true"></i></td>
-                            <td><i class="fa fa-trash" aria-hidden="true"></i></td>
+                            <td onclick="MicroModal.show('edit-modal')"><i class="fa fa-pencil" aria-hidden="true"></i></td>
+                            <td onclick="MicroModal.show('delete-modal')" class="styled-cell"><i class="fa fa-trash" aria-hidden="true"></i></td>
                         </tr>
                         <tr>
                             <td>0</td>
@@ -224,54 +225,102 @@
                             <td><i class="fa fa-pencil" aria-hidden="true"></i></td>
                             <td><i class="fa fa-trash" aria-hidden="true"></i></td>
                         </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Петров Петр Петрович</td>
-                            <td>peter@example.com</td>
-                            <td>89765432166</td>
-                            <td>21.07.1985</td>
-                            <td>17.01.2025</td>
-                            <td><i class="fa fa-history" aria-hidden="true"></i></td>
-                            <td><i class="fa fa-pencil" aria-hidden="true"></i></td>
-                            <td><i class="fa fa-trash" aria-hidden="true"></i></td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Петров Петр Петрович</td>
-                            <td>peter@example.com</td>
-                            <td>89765432166</td>
-                            <td>21.07.1985</td>
-                            <td>17.01.2025</td>
-                            <td><i class="fa fa-history" aria-hidden="true"></i></td>
-                            <td><i class="fa fa-pencil" aria-hidden="true"></i></td>
-                            <td><i class="fa fa-trash" aria-hidden="true"></i></td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Петров Петр Петрович</td>
-                            <td>peter@example.com</td>
-                            <td>89765432166</td>
-                            <td>21.07.1985</td>
-                            <td>17.01.2025</td>
-                            <td><i class="fa fa-history" aria-hidden="true"></i></td>
-                            <td><i class="fa fa-pencil" aria-hidden="true"></i></td>
-                            <td><i class="fa fa-trash" aria-hidden="true"></i></td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Петров Петр Петрович</td>
-                            <td>peter@example.com</td>
-                            <td>89765432166</td>
-                            <td>21.07.1985</td>
-                            <td>17.01.2025</td>
-                            <td><i class="fa fa-history" aria-hidden="true"></i></td>
-                            <td><i class="fa fa-pencil" aria-hidden="true"></i></td>
-                            <td><i class="fa fa-trash" aria-hidden="true"></i></td>
-                        </tr>
+                        
                     </tbody>
                 </table>
             </div>
         </section>
     </main>
+
+    <div class="modal micromodal-slide" id="add-modal" aria-hidden="true"> 
+        <div class="modal__overlay" tabindex="-1" data-micromodal-close> 
+          <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title"> 
+            <header class="modal__header"> 
+              <h2 class="modal__title" id="modal-1-title"> 
+                Добавить клиента 
+              </h2> 
+              <button class="modal__close" aria-label="Close modal" data-micromodal-close></button> 
+            </header> 
+            <main class="modal__content" id="modal-1-content"> 
+                <form class="modal__form"> 
+                    <div class="modal__form-group"> 
+                        <label for="fullname">ФИО</label> 
+                        <input type="text" id="fullname" name="fullname" required> 
+                    </div> 
+                    <div class="modal__form-group"> 
+                        <label for="email">Почта</label> 
+                        <input type="email" id="email" name="email" required> 
+                    </div> 
+                    <div class="modal__form-group"> 
+                        <label for="phone">Телефон</label> 
+                        <input type="tel" id="phone" name="phone" required> 
+                    </div> 
+                    <div class="modal__form-group"> 
+                        <label for="birthday">День рождения</label> 
+                        <input type="date" id="birthday" name="birthday" required> 
+                    </div> 
+                    <div class="modal__form-actions"> 
+                        <button type="submit" class="modal__btn modal__btn-primary">Создать</button> 
+                        <button type="button" class="modal__btn modal__btn-secondary" data-micromodal-close>Отменить</button> 
+                    </div> 
+                </form> 
+            </main> 
+          </div> 
+        </div> 
+      </div> 
+
+      <div class="modal micromodal-slide" id="edit-modal" aria-hidden="true"> 
+        <div class="modal__overlay" tabindex="-1" data-micromodal-close> 
+          <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title"> 
+            <header class="modal__header"> 
+              <h2 class="modal__title" id="modal-1-title"> 
+                Редактировать клиента 
+              </h2> 
+              <button class="modal__close" aria-label="Close modal" data-micromodal-close></button> 
+            </header> 
+            <main class="modal__content" id="modal-1-content"> 
+                <form class="modal__form"> 
+                    <div class="modal__form-group"> 
+                        <label for="fullname">ФИО</label> 
+                        <input type="text" id="fullname" name="fullname" required> 
+                    </div> 
+                    <div class="modal__form-group"> 
+                        <label for="email">Почта</label> 
+                        <input type="email" id="email" name="email" required> 
+                    </div> 
+                    <div class="modal__form-group"> 
+                        <label for="phone">Телефон</label> 
+                        <input type="tel" id="phone" name="phone" required> 
+                    </div> 
+                    <div class="modal__form-actions"> 
+                        <button type="submit" class="modal__btn modal__btn-primary">Редактировать</button> 
+                        <button type="button" class="modal__btn modal__btn-secondary" data-micromodal-close>Отменить</button> 
+                    </div> 
+                </form> 
+            </main> 
+          </div> 
+        </div> 
+      </div> 
+
+
+      <div class="modal micromodal-slide" id="delete-modal" aria-hidden="true"> 
+        <div class="modal__overlay" tabindex="-1" data-micromodal-close> 
+          <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title"> 
+            <header class="modal__header"> 
+              <h2 class="modal__title" id="modal-1-title"> 
+                Удалить клиента?
+              </h2> 
+              <button class="modal__close" aria-label="Close modal" data-micromodal-close></button> 
+            </header> 
+            <main class="modal__content" id="modal-1-content">
+                <button class="styled-button">Удалить</button>
+                <button class="styled-button" onclick="MicroModal.close('delete-modal')">Отменить</button>
+            </main> 
+          </div> 
+        </div> 
+      </div> 
+
+    <script defer src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script> 
+    <script defer src="scripts/initClientsModal.js"></script>
 </body>
 </html>
