--- a/clients.html
+++ b/clients.html
@@ -67,7 +67,7 @@
                             <td>89765432164</td>
                             <td>19.05.2004</td>
                             <td>15.01.2025</td>
-                            <td><i class="fa fa-history" aria-hidden="true"></i></td>
+                            <td onclick="MicroModal.show('history-modal')"><i class="fa fa-history" aria-hidden="true"></i></td>
                             <td onclick="MicroModal.show('edit-modal')"><i class="fa fa-pencil" aria-hidden="true"></i></td>
                             <td onclick="MicroModal.show('delete-modal')" class="styled-cell"><i class="fa fa-trash" aria-hidden="true"></i></td>
                         </tr>
@@ -315,6 +315,76 @@
             <main class="modal__content" id="modal-1-content">
                 <button class="styled-button">Удалить</button>
                 <button class="styled-button" onclick="MicroModal.close('delete-modal')">Отменить</button>
+            </main> 
+          </div> 
+        </div> 
+      </div> 
+
+      <div class="modal micromodal-slide" id="history-modal" aria-hidden="true"> 
+        <div class="modal__overlay" tabindex="-1" data-micromodal-close> 
+          <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title"> 
+            <header class="modal__header"> 
+              <h2 class="modal__title" id="modal-1-title"> 
+                История заказов
+              </h2> 
+              <small>Фамилия Имя Отчество</small>
+              <button class="modal__close" aria-label="Close modal" data-micromodal-close></button> 
+            </header> 
+            <main class="modal__content" id="modal-1-content">
+                <div class="order">
+                    <div class="order__info">
+                        <h3 class="order__number">Заказ №1</h3>
+                        <time class="order__date">Дата оформления : 2025-01-13 09:25:30</time>
+                        <p class="order__total">Общая сумма : 300.00</p>
+                    </div>
+                    <table class="order__items">
+                        <tr>
+                            <th>ИД</th>
+                            <th>Название товара</th>
+                            <th>Количество</th>
+                            <th>Цена</th>
+                        </tr>
+                        <tr>
+                            <td>9s13</td>
+                            <td>Футболка</td>
+                            <td>10</td>
+                            <td>10000</td>
+                        </tr>
+                        <tr>
+                            <td>9s13</td>
+                            <td>Футболка</td>
+                            <td>10</td>
+                            <td>10000</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="order">
+                    <div class="order__info">
+                        <h3 class="order__number">Заказ №2</h3>
+                        <time class="order__date">Дата оформления : 2025-01-13 09:25:30</time>
+                        <p class="order__total">Общая сумма : 300.00</p>
+                    </div>
+                    <table class="order__items">
+                        <tr>
+                            <th>ИД</th>
+                            <th>Название товара</th>
+                            <th>Количество</th>
+                            <th>Цена</th>
+                        </tr>
+                        <tr>
+                            <td>9s44</td>
+                            <td>Джинсы</td>
+                            <td>5</td>
+                            <td>23000</td>
+                        </tr>
+                        <tr>
+                            <td>9s13</td>
+                            <td>Легинсы</td>
+                            <td>10</td>
+                            <td>10000</td>
+                        </tr>
+                    </table>
+                </div>
             </main> 
           </div> 
         </div> 
